fix grid scrollbar (Firefox)

--- a/resources/styles/common.css
+++ b/resources/styles/common.css
@@ -1055,7 +1055,7 @@ a:hover {
 /* -------- context select ------*/
 .data-source-popout-view {
     min-width: 165px;
-    max-width: 250px;
+    max-width: 255px;
     overflow: hidden;
     position: fixed;
     background-color: white;
