--- a/resources/styles/list.css
+++ b/resources/styles/list.css
@@ -57,6 +57,7 @@
     position: relative;
     display: flex;
     flex: 1 1 auto;
+    min-height: 0;
 }
 
 .grid-header-wrp {
